--- a/SliideTest/src/main/res/values/strings.xml
+++ b/SliideTest/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="remove_user_confirmation_msg">Are you sure you want to remove this user?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="generic_action_error">There was an error performing the action</string>
 </resources>
